tests/ui/extern-flag/noprelude.stderr
error[E0433]: cannot find item `somedep` in this scope
  --> $DIR/noprelude.rs:6:5
   |
LL |     somedep::somefun();
   |     ^^^^^^^ use of undeclared crate or module `somedep`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
